WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107832
REGRESSION (
r140658
): Multiple accessibility failures on GTK
https://bugs.webkit.org/show_bug.cgi?id=107832
Summary
REGRESSION (r140658): Multiple accessibility failures on GTK
Zan Dobersek
Reported
2013-01-24 08:27:18 PST
9 accessibility layout tests have started failing after
r140658
.
http://trac.webkit.org/changeset/140658
The following tests fail: accessibility/aria-slider-value.html accessibility/aria-tables.html accessibility/document-attributes.html accessibility/language-attribute.html accessibility/spinbutton-value.html platform/gtk/accessibility/aria-slider-required-attributes.html platform/gtk/accessibility/entry-and-password.html platform/gtk/accessibility/replaced-objects-in-anonymous-blocks.html platform/gtk/accessibility/table-hierarchy.html Dashboard:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&showAllRuns=true&tests=accessibility%2Faria-slider-value.html%2Caccessibility%2Faria-tables.html%2Caccessibility%2Fdocument-attributes.html%2Caccessibility%2Flanguage-attribute.html%2Caccessibility%2Fspinbutton-value.html%2Cplatform%2Fgtk%2Faccessibility%2Faria-slider-required-attributes.html%2Cplatform%2Fgtk%2Faccessibility%2Fentry-and-password.html%2Cplatform%2Fgtk%2Faccessibility%2Freplaced-objects-in-anonymous-blocks.html%2Cplatform%2Fgtk%2Faccessibility%2Ftable-hierarchy.html
Here's the latest build for easier access to text diffs:
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r140683%20(33417)/results.html
Attachments
Patch
(4.72 KB, patch)
2013-01-24 12:54 PST
,
Dominic Mazzoni
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominic Mazzoni
Comment 1
2013-01-24 09:01:56 PST
I'm taking a look. These don't look like crashes or serious failures, and it doesn't appear these tests are failing on other platforms, so I hope it's just a simple bug due to platform differences.
Dominic Mazzoni
Comment 2
2013-01-24 12:54:19 PST
Created
attachment 184557
[details]
Patch
WebKit Review Bot
Comment 3
2013-01-25 00:25:26 PST
Comment on
attachment 184557
[details]
Patch Clearing flags on attachment: 184557 Committed
r140794
: <
http://trac.webkit.org/changeset/140794
>
WebKit Review Bot
Comment 4
2013-01-25 00:25:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug