REGRESSION (r140658): Multiple accessibility failures on GTK https://bugs.webkit.org/show_bug.cgi?id=107832

Reviewed by Chris Fleizach.

Source/WebCore:

In the ATK accessibility implementation, attachWrapper
might create a different object depending on the role of
the WebCore AccessibilityObject, whereas on other platforms
attachWrapper doesn't care. Calling init before attachWrapper
solves the problem.

Re-enables 7 skipped tests.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::getOrCreate):

LayoutTests:

Re-enable accessibility tests that were skipped when they started
failing.

* platform/gtk/TestExpectations:


git-svn-id: svn://svn.chromium.org/blink/trunk@140794 bbb929c8-8fbe-4397-9dbb-9b2b20218538