third_party/WebKit/Source/WebCore/accessibility/AXObjectCache.cpp
@@ -314,8 +314,8 @@ AccessibilityObject* AXObjectCache::getOrCreate(Widget* widget)
     
     m_widgetObjectMapping.set(widget, newObj->axObjectID());
     m_objects.set(newObj->axObjectID(), newObj);    
-    attachWrapper(newObj.get());
     newObj->init();
+    attachWrapper(newObj.get());
     return newObj.get();
 }
 
@@ -349,9 +349,8 @@ AccessibilityObject* AXObjectCache::getOrCreate(Node* node)
 
     m_nodeObjectMapping.set(node, newObj->axObjectID());
     m_objects.set(newObj->axObjectID(), newObj);
-    attachWrapper(newObj.get());
-
     newObj->init();
+    attachWrapper(newObj.get());
     newObj->setCachedIsIgnoredValue(newObj->accessibilityIsIgnored());
 
     return newObj.get();
@@ -374,9 +373,8 @@ AccessibilityObject* AXObjectCache::getOrCreate(RenderObject* renderer)
 
     m_renderObjectMapping.set(renderer, newObj->axObjectID());
     m_objects.set(newObj->axObjectID(), newObj);
-    attachWrapper(newObj.get());
-
     newObj->init();
+    attachWrapper(newObj.get());
     newObj->setCachedIsIgnoredValue(newObj->accessibilityIsIgnored());
 
     return newObj.get();
@@ -443,8 +441,8 @@ AccessibilityObject* AXObjectCache::getOrCreate(AccessibilityRole role)
         return 0;
 
     m_objects.set(obj->axObjectID(), obj);    
-    attachWrapper(obj.get());
     obj->init();
+    attachWrapper(obj.get());
     return obj.get();
 }
 
